tests/fail/tip-atama-tam-olarak-ondalik.kip
(* Yanlış tip ataması: tam-sayı olarak ondalık-sayı *)
tam-sayı olarak 3.14.
